# backend/src/main/kotlin/cz/loono/backend/api/controller/ExaminationsController.kt
@@ -2,13 +2,13 @@ package cz.loono.backend.api.controller
 
 import cz.loono.backend.api.Attributes
 import cz.loono.backend.api.BasicUser
-import cz.loono.backend.api.dto.ExaminationCompletionDto
+import cz.loono.backend.api.dto.ExaminationIdDto
 import cz.loono.backend.api.dto.ExaminationRecordDto
 import cz.loono.backend.api.dto.ExaminationTypeEnumDto
+import cz.loono.backend.api.dto.PreventionStatusDto
 import cz.loono.backend.api.exception.LoonoBackendException
 import cz.loono.backend.api.service.ExaminationRecordService
-import cz.loono.backend.db.model.ExaminationRecord
-import cz.loono.backend.let3
+import cz.loono.backend.api.service.PreventionService
 import org.springframework.beans.factory.annotation.Autowired
 import org.springframework.http.HttpStatus
 import org.springframework.http.MediaType
@@ -19,34 +19,16 @@ import org.springframework.web.bind.annotation.RequestAttribute
 import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RequestMapping
 import org.springframework.web.bind.annotation.RestController
-import java.time.LocalDate
 import javax.validation.Valid
 
 @RestController
 @RequestMapping("/examinations", produces = [MediaType.APPLICATION_JSON_VALUE])
 class ExaminationsController @Autowired constructor(
-    private val recordService: ExaminationRecordService
+    private val recordService: ExaminationRecordService,
+    private val preventionService: PreventionService
 ) {
-
-    @GetMapping
-    fun getExaminationRecords(
-        @RequestAttribute(Attributes.ATTR_BASIC_USER)
-        basicUser: BasicUser
-    ): List<ExaminationRecordDto> {
-        return recordService.getOrCreateRecords(basicUser.uid).map { it.toDto() }
-    }
-
-    private fun ExaminationRecord.toDto(): ExaminationRecordDto {
-        return ExaminationRecordDto(
-            type = ExaminationTypeEnumDto.valueOf(type),
-            worth = examinationWorth(ExaminationTypeEnumDto.valueOf(type)),
-            lastVisitMonth = lastVisit?.monthValue,
-            lastVisitYear = lastVisit?.year,
-        )
-    }
-
-    @PostMapping("/{type}/complete")
-    fun complete(
+    @PostMapping("/{type}/confirm")
+    fun confirm(
         @RequestAttribute(Attributes.ATTR_BASIC_USER)
         basicUser: BasicUser,
 
@@ -55,19 +37,52 @@ class ExaminationsController @Autowired constructor(
 
         @Valid
         @RequestBody
-        completionDto: ExaminationCompletionDto
-    ): List<ExaminationRecordDto> {
+        examinationIdDto: ExaminationIdDto
+    ): ExaminationRecordDto {
         if (type !in ExaminationTypeEnumDto.values().map { it.name }) {
             throw LoonoBackendException(HttpStatus.NOT_FOUND)
         }
 
-        recordService.completeExamination(
-            basicUser.uid,
-            type,
-            let3(completionDto.year, completionDto.month, 1, LocalDate::of)
-        )
+        return recordService.confirmExam(examinationIdDto.id, basicUser.uid)
+    }
 
-        return getExaminationRecords(basicUser)
+    @PostMapping("/{type}/cancel")
+    fun cancel(
+        @RequestAttribute(Attributes.ATTR_BASIC_USER)
+        basicUser: BasicUser,
+
+        @PathVariable(name = "type")
+        type: String,
+
+        @Valid
+        @RequestBody
+        examinationIdDto: ExaminationIdDto
+    ): ExaminationRecordDto {
+        if (type !in ExaminationTypeEnumDto.values().map { it.name }) {
+            throw LoonoBackendException(HttpStatus.NOT_FOUND)
+        }
+
+        return recordService.cancelExam(examinationIdDto.id, basicUser.uid)
+    }
+
+    @PostMapping
+    fun updateOrCreate(
+        @RequestAttribute(Attributes.ATTR_BASIC_USER)
+        basicUser: BasicUser,
+
+        @Valid
+        @RequestBody
+        examinationRecordDto: ExaminationRecordDto
+    ): ExaminationRecordDto {
+        return recordService.createOrUpdateExam(examinationRecordDto, basicUser.uid)
+    }
+
+    @GetMapping
+    fun getPreventionStatus(
+        @RequestAttribute(Attributes.ATTR_BASIC_USER)
+        basicUser: BasicUser
+    ): List<PreventionStatusDto> {
+        return preventionService.getPreventionStatus(basicUser.uid)
     }
 }
 
