# backend/src/main/kotlin/cz/loono/backend/db/model/ExaminationRecord.kt
@@ -1,7 +1,9 @@
 package cz.loono.backend.db.model
 
+import cz.loono.backend.api.dto.ExaminationStatusDto
+import cz.loono.backend.api.dto.ExaminationTypeEnumDto
 import org.hibernate.Hibernate
-import java.time.LocalDate
+import java.time.LocalDateTime
 import javax.persistence.Column
 import javax.persistence.Entity
 import javax.persistence.GeneratedValue
@@ -17,14 +19,20 @@ data class ExaminationRecord(
     @GeneratedValue(strategy = GenerationType.AUTO)
     val id: Long = 0,
 
-    @Column(nullable = false, unique = true, columnDefinition = "TEXT")
-    val type: String = "",
+    @Column(nullable = false, columnDefinition = "TEXT")
+    val type: ExaminationTypeEnumDto = ExaminationTypeEnumDto.GENERAL_PRACTITIONER,
 
-    @Column(nullable = true)
-    val lastVisit: LocalDate? = null,
+    @Column
+    val date: LocalDateTime? = null,
 
     @ManyToOne(optional = false)
     val account: Account = Account(),
+
+    @Column(nullable = false)
+    val firstExam: Boolean = true,
+
+    @Column(nullable = false, columnDefinition = "TEXT")
+    var status: ExaminationStatusDto = ExaminationStatusDto.NEW
 ) {
     override fun equals(other: Any?): Boolean {
         if (this === other) return true
@@ -39,6 +47,6 @@ data class ExaminationRecord(
 
     @Override
     override fun toString(): String {
-        return this::class.simpleName + "(id = $id , type = $type , lastVisit = $lastVisit , accountId = ${account.uid} )" // ktlint-disable max-line-ength
+        return this::class.simpleName + "(id = $id , type = $type , date = $date , accountId = ${account.uid}, firstExam = $firstExam, status = $status)" // ktlint-disable max-line-ength
     }
 }
